--- a/LeftoverSwap/LeftoverSwap-Info.plist
+++ b/LeftoverSwap/LeftoverSwap-Info.plist
@@ -8,6 +8,24 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon-small.png</string>
+				<string>Icon-small-50.png</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+				<string>Icon-60.png</string>
+				<string>Icon-72.png</string>
+				<string>Icon-76.png</string>
+				<string>Icon-120.png</string>
+				<string>Icon-152.png</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.greasedwatermelon.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
